--- a/cliente/index.html
+++ b/cliente/index.html
@@ -22,6 +22,8 @@
     <link rel="import" href="bower_components/core-menu/core-submenu.html">
     <link rel="import" href="bower_components/core-item/core-item.html">
     <link rel="import" href="bower_components/core-pages/core-pages.html">
+    <link rel="import" href="bower_components/paper-dialog/paper-dialog.html">
+    <link rel="import" href="bower_components/paper-dialog/paper-action-dialog.html">
    
     <link rel="import" href="./elements/user-model.html">
     <link rel="import" href="lib/flatiron-director/flatiron-director.html"> 
