--- a/cliente/index.html
+++ b/cliente/index.html
@@ -23,8 +23,10 @@
     <link rel="import" href="bower_components/core-item/core-item.html">
     <link rel="import" href="bower_components/core-pages/core-pages.html">
     <link rel="import" href="bower_components/paper-dialog/paper-dialog.html">
-    <link rel="import" href="bower_components/paper-dialog/paper-action-dialog.html">
-   
+    <link rel="import" href="bower_components/paper-dialog/paper-dialog-transition.html">
+    
+
+
     <link rel="import" href="./elements/user-model.html">
     <link rel="import" href="lib/flatiron-director/flatiron-director.html"> 
     <link rel="import" href="main-menu.html"> 
@@ -33,6 +35,7 @@
     <link rel="import" href="pages/search-page.html">
     <link rel="import" href="pages/profile-page.html">
     <link rel="import" href="pages/signoff-page.html">
+    <link rel="import" href="teste.html">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 
@@ -40,6 +43,6 @@
 
   </head>
   <body unresolved fullbleed>
-      <main-menu></main-menu>
-  </body>
+  <main-menu></main-menu>
+</body>
 </html> 
