--- a/cliente/index.html
+++ b/cliente/index.html
@@ -36,6 +36,8 @@
     <link rel="import" href="pages/profile-page.html">
     <link rel="import" href="pages/signoff-page.html">
     <link rel="import" href="teste.html">
+    <link rel="import" href="pages/show-images.html">
+    
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 
