--- a/cliente/pages/second-page.html
+++ b/cliente/pages/second-page.html
@@ -82,7 +82,7 @@
         </style>
         <user-model id="userModel"></user-model>
         <core-card id="core_card2" layout vertical center>
-            <paper-input label="User..." id="username" layout vertical on-blur="{{checkNameExists}}" on-keyup="{{ keypressHandler }}" ></paper-input>
+            <paper-input label="User..." id="username" layout vertical  on-keyup="{{ keypressHandler }}" ></paper-input>
             <paper-input type="password" label="Password..." id="passwd" layout vertical on-keyup="{{ keypressHandler }}" ></paper-input>
             <p>Password must constains letters and numbers</p>
             <paper-input label="Email..." id="email" layout vertical on-keyup="{{ keypressHandler }}" ></paper-input>
