core-tooltip implemented

--- a/cliente/index.html
+++ b/cliente/index.html
@@ -29,7 +29,10 @@
     <link rel="import" href="bower_components/core-transition/core-transition-css.html">
     <link rel="import" href="bower_components/paper-dropdown/paper-dropdown.html">
     <link rel="import" href="bower_components/paper-checkbox/paper-checkbox.html">
+    <link rel="import" href="bower_components/core-tooltip/core-tooltip.html">
+    
 
+    
     <link rel="import" href="./elements/user-model.html">
     <link rel="import" href="lib/flatiron-director/flatiron-director.html"> 
     <link rel="import" href="main-menu.html"> 
