--- a/cliente/pages/search-page.html
+++ b/cliente/pages/search-page.html
@@ -1,286 +1,298 @@
 <polymer-element name="search-page">
-<template>
-    <style>    
-      :host {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        box-sizing: border-box;
-      }
-      #core_header_panel {
-        width: 100%;
-        height: 100%;
-      }
-      #core_toolbar {
-        color: rgb(241, 241, 241);
-        fill: rgb(241, 241, 241);
-        background-image: url("../img/textura.jpg");
-        background-repeat: none;
-        background-size: 100%;
-      }
-      #section {
-        height: 5000px;
-        background: linear-gradient(rgb(214, 227, 231), rgb(173, 216, 230));
-      }
-      #ikarus {
-        font-size: 120%;
-        line-height: normal;
-        font-family: sans-serif;
-        margin-left: 45%;
-      }
-      #div3 {
-        visibility: hidden;
-        width: 90%;
-        border-radius: 5px;
-        box-shadow: 0 0 2px rgba(0, 0, 0, 0.5) inset, 0 0 0 1px rgba(255, 255, 255, 0.08);
-      }
-      #input{
-        width: 90%;
-        background-color: transparent;
-        border-style: none;
-        color:white;
-        height: 34px;
-      }
-      input::-webkit-input-placeholder {
-        color: white;
-        font-weight: bold;
-      }
-      #core_icon_button{
-        visibility: visible;
-      }
-      #options{
-        height: 100%;
-        -moz-transition: all 0.5s;
-        -webkit-transition: opacity 0.5s;
-        -o-transition: opacity 0.5s,visibility 0.5s;
-        transition: opacity 0.5s;
-        background-color: #3f7eaa;
-        border-radius: 0 4px 4px 4px;
-        box-shadow: 2px 4px 0 rgba(0, 0, 0, 0.1);
-        padding: 0 10px 5px;
-      }
-      #paper_item{
-        padding: 5px 15px;
-        box-shadow: none;
-        margin-top: 4px;
-        background-color: #3f7eaa;
-        border-width: 1px;
-        border-style: solid;
-        border-color: transparent;
-        border-radius: 2px;
-        font-family: Open Sans,Helvetica,Arial,sans-serif;
-        font-size: 15px;
-        color: #FFFFFF;
-        text-decoration: none;
-        margin-right: 20px;
-      }
-      #paper_item:hover {
-        z-index: 999;
-        position: relative;
-        padding: 5px 15px;
-        border-radius: 5px;
-        box-shadow: 0 0 2px rgba(0, 0, 0, 0.5) inset, 0 0 0 1px rgba(255, 255, 255, 0.08);
-        font-family: Open Sans,Helvetica,Arial,sans-serif;
-        font-weight: normal;
-        background-color: #488cbb;
-      }
-      #avatar{
-        border-radius: 5px;
-        height: 120px;
-        width: 100%;
-        box-shadow: 0 0 2px rgba(0, 0, 0, 0.5) inset, 0 0 0 1px rgba(255, 255, 255, 0.08);
-        border-width: 1px;
-        border-style: solid;
-        border-color: transparent;
-        margin-top: 10px;      
-        margin-bottom: 10px;
-        border: 2px;
-        background-color: white;
-        background-image: url("../img/person.jpg");
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
-      }
-      core-item#paper_item /deep/ #social{
-        width: 40px;
-        height: 25px;
-        left: 4px;
-      }
-      core-item#paper_item /deep/ #power{
-        width: 40px;
-        height: 25px;
-        left: 12px;
-      }
-      core-item#paper_item /deep/ #power:hover{
-        width: 40px;
-        height: 25px;
-        left: 12px;
-      }
-      @media (max-width:600px){
-        #core_icon_button1 {
-          float:left;
-        }
-        #div3{
-          margin-left: -10%;
-        }
-        #input {
-          margin-top: 0.5%;
-          height: 34px;
-        }
-      }
-      @media (max-width:480px){
-        #core_icon_button1 {
-          float:left;
-        }
-        #div3{
-          margin-left: -15%;
-        }
-        #input {
-          margin-top: 0.5%;
-          height: 34px;
-        }
-      } 
-      @media (max-width:360px){
-        #core_icon_button1 {
-          float:left;
-        }
-        #div3{
-          margin-left: -20%;
-        }
-        #input {
-          width: 80%;
-          margin-top: 0.5%;
-          height: 34px;
-        }
-      }
-      #done, cancel{
-        width:27px;
-        height: 27px;
-      }
-      #done:hover{
-        color: green;
-        width:27px;
-        height: 27px;
-      }
-      #cancel:hover{
-        color: red;
-        width:27px;
-        height: 27px;
-      }
-      #paperDropdown{
-        top: 54px;
-        right: 38px;
-        width: 150px;
-        height: 270px;
-      }
-      paper-dropdown#paperDropdown /deep/ #background{
-        background-color: #3f7eaa;
-      }
-      paper-dropdown#paperDropdown /deep/ #scroller{
-        overflow: hidden;
-      }
-      #profileDialog{
-        border-radius: 5px;
-        box-shadow: rgba(0, 0, 0, 0.0980392) 8px 8px 8px, rgba(0, 0, 0, 0.0980392) 2px 8px 8px;
-        background-color: white;
-        max-height: none;
-        max-width: none;
-      }
-      paper-dialog#profileDialog /deep/ #container{
-        width: 500px;
-        height: 500px;
-      }
+    <template>
+        <style>    
+            :host {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                box-sizing: border-box;
+            }
+            #core_header_panel {
+                width: 100%;
+                height: 100%;
+            }
+            #core_toolbar {
+                color: rgb(241, 241, 241);
+                fill: rgb(241, 241, 241);
+                background-image: url("../img/textura.jpg");
+                background-repeat: none;
+                background-size: 100%;
+            }
+            #section {
+                height: 5000px;
+                background: linear-gradient(rgb(214, 227, 231), rgb(173, 216, 230));
+            }
+            #ikarus {
+                font-size: 120%;
+                line-height: normal;
+                font-family: sans-serif;
+                margin-left: 45%;
+            }
+            #div3 {
+                visibility: hidden;
+                width: 90%;
+                border-radius: 5px;
+                box-shadow: 0 0 2px rgba(0, 0, 0, 0.5) inset, 0 0 0 1px rgba(255, 255, 255, 0.08);
+            }
+            #input{
+                width: 90%;
+                background-color: transparent;
+                border: none;
+                color:white;
+                height: 34px;
+            }
+            #input:focus{
+                outline: 0px;
+            }
+            input::-webkit-input-placeholder {
+                color: white;
+                font-weight: bold;
+            }
+            #core_icon_button{
+                visibility: visible;
+            }
+            #options{
+                height: 100%;
+                -moz-transition: all 0.5s;
+                -webkit-transition: opacity 0.5s;
+                -o-transition: opacity 0.5s,visibility 0.5s;
+                transition: opacity 0.5s;
+                background-color: #3f7eaa;
+                border-radius: 0 4px 4px 4px;
+                box-shadow: 2px 4px 0 rgba(0, 0, 0, 0.1);
+                padding: 0 10px 5px;
+            }
+            #paper_item{
+                padding: 5px 15px;
+                box-shadow: none;
+                margin-top: 4px;
+                background-color: #3f7eaa;
+                border-width: 1px;
+                border-style: solid;
+                border-color: transparent;
+                border-radius: 2px;
+                font-family: Open Sans,Helvetica,Arial,sans-serif;
+                font-size: 15px;
+                color: #FFFFFF;
+                text-decoration: none;
+                margin-right: 20px;
+            }
+            #paper_item:hover {
+                z-index: 999;
+                position: relative;
+                padding: 5px 15px;
+                border-radius: 5px;
+                box-shadow: 0 0 2px rgba(0, 0, 0, 0.5) inset, 0 0 0 1px rgba(255, 255, 255, 0.08);
+                font-family: Open Sans,Helvetica,Arial,sans-serif;
+                font-weight: normal;
+                background-color: #488cbb;
+            }
+            #avatar{
+                border-radius: 5px;
+                height: 120px;
+                width: 100%;
+                box-shadow: 0 0 2px rgba(0, 0, 0, 0.5) inset, 0 0 0 1px rgba(255, 255, 255, 0.08);
+                border-width: 1px;
+                border-style: solid;
+                border-color: transparent;
+                margin-top: 10px;      
+                margin-bottom: 10px;
+                border: 2px;
+                background-color: white;
+                background-image: url("../img/person.jpg");
+                background-size: 100% 100%;
+                background-repeat: no-repeat;
+            }
+            core-item#paper_item /deep/ #social{
+                width: 40px;
+                height: 25px;
+                left: 4px;
+            }
+            core-item#paper_item /deep/ #power{
+                width: 40px;
+                height: 25px;
+                left: 12px;
+            }
+            core-item#paper_item /deep/ #power:hover{
+                width: 40px;
+                height: 25px;
+                left: 12px;
+            }
+            @media (max-width:600px){
+                #core_icon_button1 {
+                    float:left;
+                }
+                #div3{
+                    margin-left: -10%;
+                }
+                #input {
+                    margin-top: 0.5%;
+                    height: 34px;
+                }
+            }
+            @media (max-width:480px){
+                #core_icon_button1 {
+                    float:left;
+                }
+                #div3{
+                    margin-left: -15%;
+                }
+                #input {
+                    margin-top: 0.5%;
+                    height: 34px;
+                }
+            } 
+            @media (max-width:360px){
+                #core_icon_button1 {
+                    float:left;
+                }
+                #div3{
+                    margin-left: -20%;
+                }
+                #input {
+                    width: 80%;
+                    margin-top: 0.5%;
+                    height: 34px;
+                    
+                }
+            }
+            #done, cancel{
+                width:27px;
+                height: 27px;
+            }
+            #done:hover{
+                color: green;
+                width:27px;
+                height: 27px;
+            }
+            #cancel:hover{
+                color: red;
+                width:27px;
+                height: 27px;
+            }
+            #paperDropdown{
+                top: 54px;
+                right: 38px;
+                width: 150px;
+                height: 270px;
+            }
+            paper-dropdown#paperDropdown /deep/ #background{
+                background-color: #3f7eaa;
+            }
+            paper-dropdown#paperDropdown /deep/ #scroller{
+                overflow: hidden;
+            }
+            #profileDialog{
+                border-radius: 5px;
+                box-shadow: rgba(0, 0, 0, 0.0980392) 8px 8px 8px, rgba(0, 0, 0, 0.0980392) 2px 8px 8px;
+                background-color: white;
+                max-height: none;
+                max-width: none;
+            }
+            paper-dialog#profileDialog /deep/ #container{
+                width: 500px;
+                height: 500px;
+            }
+            
 
 
 
-    </style>
+        </style>
 
-    <user-model id="userModel"></user-model>
-    <core-card id="core_card" layout vertical center fit on-dialog="{{ toggle }}">
-      <core-header-panel mode="waterfall-tall" id="core_header_panel" headermargin="128" condenses headerheight="192">
+        <user-model id="userModel"></user-model>
+        <core-card id="core_card" layout vertical center fit on-dialog="{{ toggle }}">
+            <core-header-panel mode="waterfall-tall" id="core_header_panel" headermargin="128" condenses headerheight="192">
 
-        <core-toolbar id="core_toolbar" class="animate tall">
+                <core-toolbar id="core_toolbar" class="animate tall">
 
-          <core-icon-button icon="arrow-back" on-tap="{{}}" id="core_icon_button"></core-icon-button>
-          <core-icon-button icon="search" id="search_icon" style="visibility:visible" on-tap="{{ loadSearcher }}" ></core-icon-button>    
-          <div id="ikarus" class="bottom indent">Ikarus</div>
+                    <core-icon-button icon="arrow-back" on-tap="{{}}" id="core_icon_button"></core-icon-button>
+                    <core-icon-button icon="search" id="search_icon" style="visibility:visible" on-tap="{{ loadSearcher }}" ></core-icon-button>    
+                    <div id="ikarus" class="bottom indent">Ikarus</div>
 
-          <div id="div3">
-            <core-icon-button icon="search" id="core_icon_button1"></core-icon-button>
+                    <div id="div3" >
+                        <core-icon-button icon="search" id="core_icon_button1"></core-icon-button>
+                        <input id="input" placeholder="Producto..." is="core-input" on-blur="{{ unloadSearcher }}" >
+                    </div>
 
-            <input id="input" placeholder="Producto..." is="core-input">
-          </div>
+                    <core-icon-button icon="menu" id="menu" theme="core-light-theme" on-tap="{{ showOptions }}">
+                        <paper-dropdown id="paperDropdown" vertical layout right>    
+                            <div fit id="options">    
+                                <div id="avatar"></div>
+                                <core-item id="paper_item" label="Profile" on-tap="{{ showProfile }}"><core-icon icon="social:person" id="social"></core-icon></core-item>
+                                <core-item id="paper_item" label="Sign Off" on-tap="{{ showSignOff }}"><core-icon icon="settings-power" id="power"></core-icon></core-item>
+                            </div>
+                        </paper-dropdown>
+                    </core-icon-button>
 
-          <core-icon-button icon="menu" id="menu" theme="core-light-theme" on-tap="{{ showOptions }}">
-            <paper-dropdown id="paperDropdown" vertical layout right>    
-              <div fit id="options">    
-                <div id="avatar"></div>
-                <core-item id="paper_item" label="Profile" on-tap="{{ showProfile }}"><core-icon icon="social:person" id="social"></core-icon></core-item>
-                <core-item id="paper_item" label="Sign Off" on-tap="{{ showSignOff }}"><core-icon icon="settings-power" id="power"></core-icon></core-item>
-              </div>
-            </paper-dropdown>
-          </core-icon-button>
+                </core-toolbar>
 
-        </core-toolbar>
+                <section id="section" content>
 
-        <section id="section" content >
+                </section>
 
-        </section>
-
-      </core-header-panel>
-      <paper-dialog  id="profileDialog" transition="core-transition-center" layout vertical center>
-        <profile-page id="profileId"></profile-page>
-      </paper-dialog>
-      <paper-dialog  autoCloseDisabled="true" backdrop="true" id="dialog" transition="core-transition-center">
-        Are you sure that you want to delete your account?
-        <table layout vertical center>
-          <tr >
-            <td style="padding: 10px"><core-icon affirmative icon="done" id ="done" on-click="{{ deleteUser }}" ></core-icon></td>
-          <td style="padding: 10px"><core-icon affirmative icon="cancel" id ="cancel"></core-icon></td>
-          </tr>
-        </table>
-      </paper-dialog>
+            </core-header-panel>
+            <paper-dialog  id="profileDialog" transition="core-transition-center" layout vertical center>
+                <profile-page id="profileId"></profile-page>
+            </paper-dialog>
+            <paper-dialog  autoCloseDisabled="true" backdrop="true" id="dialog" transition="core-transition-center">
+                Are you sure that you want to delete your account?
+                <table layout vertical center>
+                    <tr >
+                        <td style="padding: 10px"><core-icon affirmative icon="done" id ="done" on-click="{{ deleteUser }}" ></core-icon></td>
+                    <td style="padding: 10px"><core-icon affirmative icon="cancel" id ="cancel"></core-icon></td>
+                    </tr>
+                </table>
+            </paper-dialog>
 
 
-    </core-card>
-  </template>
-  <script>
+        </core-card>
+    </template>
+    <script>
 
-    Polymer({
-      loadSearcher: function () {
-        this.$.div3.style.visibility = "visible";
-        this.$.search_icon.style.visibility = "hidden";
-        this.$.div3.style.width = "100%";
-        this.$.div3.style.backgroundColor = "#185786";
-        this.$.div3.style.fill = "rgb(241, 241, 241)";
-        this.$.div3.style.color = "rgb(241, 241, 241)";
-        this.$.core_icon_button.style.visibility = "hidden";
-        this.$.core_icon_button.style.marginLeft = "-5%";
-        this.$.menu.style.visibility = "hidden";
-      },
-      showOptions: function () {
-        this.$.paperDropdown.toggle();
-      },
-      showProfile: function () {
-        this.$.profileDialog.toggle();
-        this.$.profileId.saveUserValues();
-      },
-      showSignOff: function () {
-        logName = "";
-        location.href = " ";
-      },
-      toggle: function () {
-        this.$.dialog.toggle();
-      },
-      deleteUser: function () {
-        this.$.userModel.deleteUser(logName.username, function (result) {
-          if (result) {
-            logName = "";
-            location.href = " ";
-          }
+        Polymer({
+            unloadSearcher: function () {
+                this.$.div3.style.visibility = "hidden";
+                this.$.search_icon.style.visibility = "visible";
+                this.$.core_icon_button.style.visibility = "visible";
+                this.$.menu.style.visibility = "visible";
+                this.$.core_icon_button.style.marginLeft = "0%";
+            },
+            loadSearcher: function () {
+                this.$.div3.style.visibility = "visible";
+                this.$.search_icon.style.visibility = "hidden";
+                this.$.div3.style.width = "100%";
+                this.$.div3.style.backgroundColor = "#185786";
+                this.$.div3.style.fill = "rgb(241, 241, 241)";
+                this.$.div3.style.color = "rgb(241, 241, 241)";
+                this.$.core_icon_button.style.visibility = "hidden";
+                this.$.core_icon_button.style.marginLeft = "-5%";
+                this.$.menu.style.visibility = "hidden";
+                this.$.input.focus();
+            },
+            showOptions: function () {
+                this.$.paperDropdown.toggle();
+            },
+            showProfile: function () {
+                this.$.profileDialog.toggle();
+                this.$.profileId.saveUserValues();
+            },
+            showSignOff: function () {
+                logName = "";
+                location.href = " ";
+            },
+            toggle: function () {
+                this.$.dialog.toggle();
+            },
+            deleteUser: function () {
+                this.$.userModel.deleteUser(logName.username, function (result) {
+                    if (result) {
+                        logName = "";
+                        location.href = " ";
+                    }
+                });
+            }
         });
-      }
-    });
 
-  </script>
+    </script>
 
 </polymer-element>
