--- a/cliente/pages/second-page.html
+++ b/cliente/pages/second-page.html
@@ -90,13 +90,13 @@
 
 
         </style>
-        <style shim-shadowdom>
+       <style shim-shadowdom>
             core-tooltip.fancy::shadow .core-tooltip {
                 opacity: 2;
                 -webkit-transition: all 300ms cubic-bezier(0,1.92,.99,1.07);
                 transition: all 300ms cubic-bezier(0,1.92,.99,1.07);
-                -webkit-transform: translate3d(0, -50px, 0);
-                transform: translate3d(0, -60px, 0);
+                -webkit-transform: translate3d(-40px, 0, 0);
+                transform: translate3d(-40px, 0, 0);
             }
             core-tooltip.fancy:hover::shadow .core-tooltip,
             core-tooltip.fancy:focus::shadow .core-tooltip {
@@ -105,11 +105,13 @@
                 transform: translate3d(0, 0, 0);
             }
         </style>
+       
         <user-model id="userModel"></user-model>
         <core-card id="core_card2" layout vertical center>
             <paper-input label="User..." id="username" layout vertical  on-blur="{{checkNameExists}}" on-keyup="{{ keypressHandler }}" ></paper-input>
             <paper-input type="password" label="Password..." id="passwd" layout vertical on-keyup="{{ keypressHandler }}" ></paper-input>
             <div layout horizontal center>
+                
                 <core-tooltip label="Show password" position="left" class="fancy">
                     <paper-checkbox id="checkbox" on-change="{{showPasswd}}"></paper-checkbox>
                 </core-tooltip>
