--- a/cliente/elements/using-api.html
+++ b/cliente/elements/using-api.html
@@ -4,7 +4,7 @@
     <script>
 
         (function () {
-            var base = "/api"
+            var base = "/provider";
             /* function defaultAjaxErrorHandler(xhr, err, desc) {
              console.log(xhr, err, desc);
              var errorToast = document.querySelector('#errorToast');
@@ -23,10 +23,11 @@
             }
             Polymer('using-api', {
                 getObject: function (item, callback) {
-                    doAjax({type: 'GET', url: '/' + item}, function (result) {
-                        callback(result);
+                    doAjax({type: 'GET', url: '/ebay/' + item}, function (result) {
+                       callback(result);
                     }, function (error) {
                         console.log("Error Propio");
+                        console.log(result);
                     });
                 }
             });
