--- a/cliente/pages/products-container.html
+++ b/cliente/pages/products-container.html
@@ -19,14 +19,14 @@
             }
         </style>
         <using-api id="usingApi"></using-api>
-        <template>  
+   
             <core-card id="core_card" layout vertical center>
                 <core-input readonly  name="user" value="" id="text"></core-input>
                 <div id="imgContainer">   
                     <a id="a" href=""><img id ="img" src="" ></a>
                 </div>
             </core-card>
-        </template>
+      
         <template>
             <core-input readonly  name="user" value="JAJAJ" id="text"></core-input>
         </template>
@@ -38,10 +38,9 @@
         Polymer({
             loadData: function (result) {
                 console.log(result);
-                this.$.core_card.querySelector('text').value = 'New foo';
-                //this.$.text.value = result.Item[0].Title;
-                //this.$.img.src = result.Item[0].GalleryURL;
-                //this.$.a.href = result.Item[0].ViewItemURLForNaturalSearch;
+                this.$.text.value = result.Item[0].Title;
+                this.$.img.src = result.Item[0].GalleryURL;
+                this.$.a.href = result.Item[0].ViewItemURLForNaturalSearch;
             }
 
 
