client publish ad

--- a/cliente/index.html
+++ b/cliente/index.html
@@ -30,6 +30,7 @@
         <link rel="import" href="bower_components/paper-dropdown/paper-dropdown.html">
         <link rel="import" href="bower_components/paper-checkbox/paper-checkbox.html">
         <link rel="import" href="bower_components/core-tooltip/core-tooltip.html">
+        <link rel="import" href="bower_components/paper-toast/paper-toast.html">
 
         <link rel="import" href="./elements/using-api.html">
         <link rel="import" href="./elements/user-model.html">
@@ -40,6 +41,7 @@
         <link rel="import" href="pages/second-page.html">
         <link rel="import" href="pages/search-page.html">
         <link rel="import" href="pages/profile-page.html">
+         <link rel="import" href="pages/announcement-page.html">
         <link rel="import" href="main-menu.html">
 
 
