announcement-page and show-ads implementd

--- a/cliente/index.html
+++ b/cliente/index.html
@@ -26,11 +26,13 @@
         <link rel="import" href="bower_components/paper-dialog/paper-dialog.html">
         <link rel="import" href="bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
         <link rel="import" href="bower_components/core-icons/social-icons.html">
+        <link rel="import" href="bower_components/core-icons/communication-icons.html">
         <link rel="import" href="bower_components/core-transition/core-transition-css.html">
         <link rel="import" href="bower_components/paper-dropdown/paper-dropdown.html">
         <link rel="import" href="bower_components/paper-checkbox/paper-checkbox.html">
         <link rel="import" href="bower_components/core-tooltip/core-tooltip.html">
         <link rel="import" href="bower_components/paper-toast/paper-toast.html">
+        <link rel="import" href="bower_components/core-pages/core-pages.html">
 
         <link rel="import" href="./elements/using-api.html">
         <link rel="import" href="./elements/user-model.html">
@@ -41,7 +43,8 @@
         <link rel="import" href="pages/second-page.html">
         <link rel="import" href="pages/search-page.html">
         <link rel="import" href="pages/profile-page.html">
-         <link rel="import" href="pages/announcement-page.html">
+        <link rel="import" href="pages/announcement-page.html">
+        <link rel="import" href="pages/show-ads.html">
         <link rel="import" href="main-menu.html">
 
 
