publihment saving in BBDD

--- a/cliente/index.html
+++ b/cliente/index.html
@@ -36,6 +36,7 @@
 
         <link rel="import" href="./elements/using-api.html">
         <link rel="import" href="./elements/user-model.html">
+        <link rel="import" href="./elements/proposal-model.html">
         <link rel="import" href="lib/flatiron-director/flatiron-director.html"> 
         
         <link rel="import" href="pages/main-page.html"> 
